# yugioh_exchange

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  errors.py  main.py  routes.py  utils.py
db/: __init__.py  main.py  sample_data.py
docs/: doc_links.md  installs.md
models/: __init__.py  offer.py  user.py  yugioh_card.py
webserver/manager/: settings.py  urls.py
webserver/static/css/: make_offer_styles.css  select_cards_styles.css  styles.css
webserver/static/js/: config.js  select_cards_scripts.js
webserver/web/: decorators.py  urls.py  views.py
webserver/web/templates/: _card_buttons.html  _card_grid.html  admin.html  admin_base.html  admin_cards.html  admin_content.html  admin_users.html  base.html  card_detail.html  card_list.html  cards.html  create_account.html  exchanges.html  home.html  home_screen.html  initial_screen.html  login.html  make_exchange.html  make_offer.html  my_offers.html  offers.html  select_cards.html  select_cards_copy.html  select_cards_offer.html  select_cards_wanted.html
